feat: 신청 커서 상태에 따른 쿼리 생성